# doctor-cornelius

backend/: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  PRD.md  pyproject.toml
backend/docker/: Dockerfile  compose.yml
backend/migrations/: README.md
backend/scripts/: chat_with_agent.py  ingest_slack_to_neo4j.py  run_neo4j.sh  test_slack_collector.py
backend/src/doctor_cornelius/: config.py  main.py
backend/src/doctor_cornelius/agent/: __init__.py  graph.py  manager.py  tools.py
backend/src/doctor_cornelius/api/: __init__.py  router.py
backend/src/doctor_cornelius/api/endpoints/: __init__.py  health.py  ingest.py  search.py
backend/src/doctor_cornelius/bot/: __init__.py  app.py
backend/src/doctor_cornelius/collectors/: __init__.py  base.py  slack_collector.py
backend/src/doctor_cornelius/knowledge/: __init__.py  graph_client.py
backend/src/doctor_cornelius/scheduler/: __init__.py  jobs.py
backend/src/doctor_cornelius/schemas/: __init__.py  episode.py
backend/src/doctor_cornelius/security/: __init__.py  filters.py
backend/src/doctor_cornelius/transformers/: __init__.py  base.py  slack_transformer.py
backend/tests/: conftest.py
backend/tests/unit/: test_slack_collector.py
